# UFABC-REC.github.io

./: index.html  lab2
lab1/: rapido.avi
lab2/1/kernel11x11/: add_filter_to_images.cpp
lab2/1/kernel3x3/: CMakeLists.txt  add_filter_to_images.cpp
lab2/1/kernel5x5/: add_filter_to_images.cpp
lab2/1/kernel7x7/: add_filter_to_images.cpp
lab2/2/sal_pimenta/: CMakeLists.txt  sal_pimenta.cpp
lab2/3/best_filter/: CMakeLists.txt  best_filter_video_webcam.cpp
lab2/3/worst_filter/: CMakeLists.txt  worst_filter_video_webcam.cpp
lab3/2_a/: CMakeLists.txt  filter_image  filter_image.cpp
lab3/2_b/: CMakeLists.txt  detector_canny  detector_canny.cpp
lab3/2_c/: CMakeLists.txt  detector_canny_save_images  detector_canny_save_images.cpp  teste.txt
lab4/b_1/: CMakeLists.txt  equalize_image  equalize_image.cpp
lab4/b_2/: CMakeLists.txt  equalize_webcam_image  equalize_webcam_image.cpp
lab4/b_3/: CMakeLists.txt  binary_webcam_image  binary_webcam_image.cpp
lab4/b_4/: CMakeLists.txt  equalize_three_channels  equalize_three_channels.cpp
lab5/1/: bg_sub  bg_sub.cpp  objeto_rapido.avi
lab5/2/: bg_sub  bg_sub.cpp
lab5/exemplo/: bg_sub
lab6/1/: detect_features  detect_features.cpp
lab6/2/: CMakeLists.txt  detect_features  detect_features.cpp
projeto/: CMakeLists.txt  detectar_carros  detectar_carros.cpp  detectar_invasor  detectar_invasor.cpp
projeto/teste_video/: CMakeLists.txt  detectar_invasor_video  detectar_invasor_video.cpp
